R131.4  Refactoring & Save to Photos, Save menu.. Issue on ImageController navigationItem shows album name change..

--- a/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackInfoHeader.xib
+++ b/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackInfoHeader.xib
@@ -21,6 +21,9 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <action selector="userTextValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="vYd-tZ-Dyo"/>
+                        </connections>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cellLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNG-5Z-J2k">
                         <rect key="frame" x="16" y="11" width="83" height="21"/>
