R131.5 Stack name & Save fixes. UIApplication sends .resignFirstResponder to close any open textField keyboards

--- a/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackInfoHeader.xib
+++ b/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackInfoHeader.xib
@@ -16,23 +16,26 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="userText" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HyN-mt-qPO" userLabel="userText">
-                        <rect key="frame" x="126" y="4" width="194" height="34"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="cellLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNG-5Z-J2k">
+                        <rect key="frame" x="16" y="11.666666666666664" width="83" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="userText" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HyN-mt-qPO" userLabel="userText">
+                        <rect key="frame" x="102" y="5" width="202" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <action selector="userTextValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="vYd-tZ-Dyo"/>
                         </connections>
                     </textField>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cellLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNG-5Z-J2k">
-                        <rect key="frame" x="16" y="11" width="83" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="HyN-mt-qPO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Pzd-yf-kXn"/>
+                    <constraint firstItem="HyN-mt-qPO" firstAttribute="leading" secondItem="HNG-5Z-J2k" secondAttribute="trailing" constant="3" id="WV4-mq-XqC"/>
+                    <constraint firstItem="HNG-5Z-J2k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jWN-pt-J3P"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
