--- a/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackAlbumHeader.xib
+++ b/RiftEffects/UI Support/CompositionalLayout/cell xib/PGLStackAlbumHeader.xib
@@ -10,42 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PGLStackInfoHeader" customModule="RiftEffects" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PGLStackAlbumHeader" customModule="RiftEffects" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cellLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNG-5Z-J2k">
-                        <rect key="frame" x="21" y="13" width="61" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cellLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yyo-J2-ivl">
+                        <rect key="frame" x="5" y="13" width="61" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" systemColor="secondaryLabelColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="userText" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HyN-mt-qPO" userLabel="userText">
-                        <rect key="frame" x="89.333333333333329" y="5" width="220.66666666666669" height="34"/>
+                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="userText" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bKe-xs-Afz" userLabel="userText">
+                        <rect key="frame" x="74" y="5" width="241" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
-                        <connections>
-                            <action selector="userTextValueChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="vYd-tZ-Dyo"/>
-                        </connections>
                     </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="HyN-mt-qPO" secondAttribute="trailing" constant="10" id="4aA-hA-fjO"/>
-                    <constraint firstItem="HNG-5Z-J2k" firstAttribute="centerY" secondItem="HyN-mt-qPO" secondAttribute="centerY" id="NFD-0t-tdM"/>
-                    <constraint firstItem="HyN-mt-qPO" firstAttribute="leading" secondItem="HNG-5Z-J2k" secondAttribute="trailing" constant="7.3333333333333428" id="Ujn-er-iQb"/>
-                    <constraint firstItem="HNG-5Z-J2k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="nBO-dV-VcM"/>
-                    <constraint firstItem="HNG-5Z-J2k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="q8o-te-Meb"/>
+                    <constraint firstItem="bKe-xs-Afz" firstAttribute="leading" secondItem="Yyo-J2-ivl" secondAttribute="trailing" constant="7.9999999999999858" id="Hm9-5q-YbA"/>
+                    <constraint firstItem="Yyo-J2-ivl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Kvv-05-s9M"/>
+                    <constraint firstItem="Yyo-J2-ivl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SBD-SS-Zpl"/>
+                    <constraint firstItem="bKe-xs-Afz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="kmh-BY-EHj"/>
+                    <constraint firstAttribute="trailing" secondItem="bKe-xs-Afz" secondAttribute="trailing" constant="5" id="wbA-5K-qK1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="cellLabel" destination="HNG-5Z-J2k" id="jUo-HY-pjK"/>
-                <outlet property="userText" destination="HyN-mt-qPO" id="Ck4-Nm-efq"/>
+                <outlet property="cellLabel" destination="Yyo-J2-ivl" id="j5i-zu-rOI"/>
+                <outlet property="userText" destination="bKe-xs-Afz" id="ZxP-Rj-Eeb"/>
             </connections>
-            <point key="canvasLocation" x="94.656488549618317" y="20.422535211267608"/>
+            <point key="canvasLocation" x="52" y="21"/>
         </tableViewCell>
     </objects>
     <resources>
